# OTUS-CPP-Basic-Homework

./: README.md
Lesson2/: CMakeLists.txt  example.cpp  move_me_out.cpp
homework_2/: hello_world.cpp
homework_3/: v.1
homework_3/homework_3_ver_1/: CMakeLists.txt  main.cpp
homework_3/homework_3_ver_2/: CMakeLists.txt  check_value.cpp  check_value.h  main.cpp  print_table_score.cpp  print_table_score.h  save_table_score.cpp  save_table_score.h
homework_3/homework_3_ver_3/: CMakeLists.txt  main.cpp  print_table_score.cpp  save_table_score.cpp  save_table_score.h  work_with_result.cpp  work_with_result.h
homework_4/: CMakeLists.txt  main.cpp
homework_4/include/: add.hpp  astnode.hpp  div.hpp  lexer.hpp  mul.hpp  number.hpp  parser.hpp  sub.hpp  variable.hpp
homework_4/src/: add.cpp  astnode.cpp  div.cpp  lexer.cpp  mul.cpp  number.cpp  parser.cpp  sub.cpp  variable.cpp
homework_5/: CMakeLists.txt  statistics.cpp
homework_5/Include/: IStatistics.h  Max.h  Mean.h  Min.h  Prcnt.h  Std.h
homework_5/Src/: Max.cpp  Mean.cpp  Min.cpp  Prcnt.cpp  Std.cpp
homework_6/: CMakeLists.txt  Container.cpp
homework_6/include/: dblst.h  vctr.h
homework_7/: CMakeLists.txt  Container.cpp
homework_7/include/: dblst.h  vctr.h
homework_7/test/: containers_test.cpp  dblst_test_list.cpp  vctr_test_list.cpp
homework_8/: CMakeLists.txt  README.md  async.cpp
